fixing overlap

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,6 +1,8 @@
 .rt-header {
-  @apply fixed top-0 right-0 left-0 grid bg-white z-10 shadow;
+  @apply fixed top-0 right-0 left-0 grid bg-white shadow;
 
+  /* Map z-index is 400 */
+  z-index: 401;
   grid-template-columns: 1fr 45% 1fr;
   grid-template-rows: 1fr;
   gap: 0px 0px;
